Fix: aligned center the Article divider # # # (#203)
* Fix: aligned center the Article divider # # #

* Fix: add specific query for article default content wrapper

* Fix: Add article template checker

* Fix: Add article template checker before scan textnodes scripts

---------

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -318,6 +318,12 @@ body.article main .section.abstract h1 {
   margin: 0;
 }
 
+body.article main .section .article-end-divider {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
 @media (min-width: 600px) {
   main .section {
     padding: 64px 35px;
